# povorotnik

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs  rotate_screen.rs
client/src/rotate_screen/: windows.rs
firmware/: CMakeLists.txt  CMakePresets.json
firmware/src/: btstack_config.h  main.c  profile.gatt
src/: main.rs  rotate_screen.rs
src/rotate_screen/: kde.rs  win32.rs
