[package]
name = "povorotnik-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
btleplug = "0.11.5"
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Graphics_Gdi"] }

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"
